# derive_pb

./: Cargo.toml
.github/workflows/: rust.yml
src/: a_enum.rs  a_struct.rs  field_attr.rs  field_meta_map.rs  lib.rs  utils.rs
tests/: aaa.rs  basic.rs  bbb.rs
