[package]
name = "derive_pb"
version = "0.0.1"
edition = "2021"

description = "derive macro for proto"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }

[dependencies]
# syn = {version = "2", features = ["extra-traits"]}
syn = {version = "2", features = ["full", "extra-traits"]}
quote = "1"
proc-macro2 = "1"
uuid = "1"

m-helper = "~0"



[profile.release]
debug = true
